# Astronomical-watch

./: .gitignore  AUTOSTART_WINDOWS.bat  BUILD.md  CALCULATION_CARD_FIXED.md  CHANGELOG.md  COMPARISON_CARD_FIXED.md  CONTRIBUTING.md  CORE_FILES.md  DESKTOP_APPLICATION.md  DESKTOP_APPLICATIONS.md  DESKTOP_APP_COMPLETE.md  DESKTOP_LAUNCHER_README.md  DESKTOP_WIDGET_GUIDE.md  DIES_224_MILESTONE.md  EXPLANATION_SYSTEM_COMPLETE.md  INSTALL.md  INSTALLATION_SUMMARY.md  INSTALL_EASY.bat  LAUNCHER_EXPLANATION.md  LAYOUT_OPTIMIZATIONS.md  LICENSE.CORE  MANIFEST.in  MD_CLEANUP_SUMMARY.md  MODERN_WIDGET_DESIGN.md  NEW_LANGUAGES_SUMMARY.md  QUICK_INSTALL.md  QUICK_TEST.bat  README.md  README_PLATFORM_NOTES.md  README_WINDOWS.md  SPEC.md  TEST_LAUNCH.bat  TEST_SHORTCUT.bat  TKINTER_FIX.md  TRADEMARK_POLICY.md  UPDATE_INSTALL.bat  USER_GUIDE.md  WIDGET_FINAL_OPTIMIZATIONS.md  WINDOWS_AUTOSTART_GUIDE.md  WINDOWS_FILES.md  (+61 more)
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yaml  ci.yml
astro/: timescales.py
cli/: awatch.py
core/: __init__.py  astro_time_core.py  cli.py  frames.py  nutation.py  solar.py  timebase.py  vsop87_earth.py
docs/: ASTRO_TIME_SYSTEM.md  NTP_TIME_SYNC.md  PRECISE_EQUINOX.md
net/: equinox_fetch.py
offline/: cache.py
scripts/: generate_vsop87.py  manual_ui_demo.py
services/: equinox_service.py
solar/: equinox_precise.py  solar_longitude_light.py
src/astronomical_watch/: __init__.py
src/astronomical_watch/core/: astro_time_core.py  timeframe.py
src/astronomical_watch/net/: time_sync.py
src/astronomical_watch/services/: equinox_service.py
src/astronomical_watch/translate/: explanation_ar_card.py  explanation_bn_card.py  explanation_de_card.py  explanation_el_card.py  explanation_en_card.py  explanation_es_card.py  explanation_fa_card.py  explanation_fr_card.py  explanation_ha_card.py  explanation_he_card.py  explanation_hi_card.py  explanation_id_card.py  explanation_it_card.py  (+15 more)
tests/: test_api_now.py  test_astro_time_core.py  test_core_skeleton.py  test_equinox.py  test_equinox_precision_basic.py  test_meridian_mapping.py  test_normal_mode_language_menu.py  test_normal_mode_language_persistence.py  test_ntp_sync.py  test_precision.py  test_sky_theme.py  test_solar_events.py  test_structure.py  test_timeframe.py  test_timescales_delta_t.py  test_ui_gradient.py  test_vsop87d_system.py
tests/data/: equinox_reference.json
ui/: README.md  calculation_card.py  comparison_card.py  eplanation_de_card.py  explanation_ar_card.py  explanation_card.py  explanation_en_card.py  explanation_es_card.py  explanation_ha_card.py  explanation_hi_card.py  explanation_pl_card.py  explanation_sw_card.py  explanation_tr_card.py  gradient.py  main.py  normal_mode.py  translations.py  widget.py
web/: __init__.py
web/static/: app.js  index.html  manifest.webmanifest  service-worker.js
(+15 files in other folders)
