[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astronomical-watch"
version = "1.0.0"
description = "Astronomical time tracking based on real astronomical cycles"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "NndMlc"}]
keywords = ["astronomy", "time", "ephemeris", "astronomical-watch"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Astronomy"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "mypy>=1.8",
  "ruff>=0.3.0"
]

[project.scripts]
astronomical-watch = "astronomical_watch.ui.main:main"
awatch = "astronomical_watch.ui.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["astronomical_watch*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra"
markers = [
  "ui: tests requiring a display / tkinter"
]
